# fastapi-endpoints

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-build.txt  sitemap.xml
.github/workflows/: ci.yaml
CONTRIBUTING/: index.html
auto-discovery/: index.html
docs/: auto-discovery.md  exclude-routers.md  index.md  quick-start.md
docs /: CONTRIBUTING.md
example/: README.md  app.py
example/routers/api_v1/: __init__.py  data.py  probes.py
exclude-routers/: index.html
quick-start/: index.html
search/: search_index.json
src/example_app/: app.py
src/example_app/routers/: __init__.py  dev.py  items.py
src/example_app/routers/api/v1/: items.py
src/example_app/routers/api_v1/: items.py
src/example_app/routers/api_v1/auth/: users.py
src/fastapi_endpoints/: __init__.py  constants.py  exceptions.py  router.py  utils.py
tests/: conftest.py  test_router.py  test_utils.py
